// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@startupjs/babel-plugin-import-to-react-lazy Ignores files without @asyncImports annotation: Ignores files without @asyncImports annotation 1`] = `

console.log('Hello World')

      ↓ ↓ ↓ ↓ ↓ ↓

console.log("Hello World");


`;

exports[`@startupjs/babel-plugin-import-to-react-lazy Imports lazy and transforms export to use it: Imports lazy and transforms export to use it 1`] = `

/* @asyncImports */
export { default as PHome } from './PHome'
export { default as PGames } from './PGames'
console.log('Hello World')

      ↓ ↓ ↓ ↓ ↓ ↓

import { lazy as _lazy } from "react";

/* @asyncImports */
export const PHome = _lazy(() => import("./PHome"));
export const PGames = _lazy(() => import("./PGames"));
console.log("Hello World");


`;

exports[`@startupjs/babel-plugin-import-to-react-lazy Imports lazy and transforms import to use it: Imports lazy and transforms import to use it 1`] = `

/* @asyncImports */
import PHome from './PHome'
import PGames from './PGames'
export { PHome, PGames }
console.log('Hello World')

      ↓ ↓ ↓ ↓ ↓ ↓

import { lazy as _lazy } from "react";

/* @asyncImports */
const PHome = _lazy(() => import("./PHome"));

const PGames = _lazy(() => import("./PGames"));

export { PHome, PGames };
console.log("Hello World");


`;

exports[`@startupjs/babel-plugin-import-to-react-lazy Processes files with @asyncImports annotation and imports lazy automatically: Processes files with @asyncImports annotation and imports lazy automatically 1`] = `

/* @asyncImports */
console.log('Hello World')

      ↓ ↓ ↓ ↓ ↓ ↓

import { lazy as _lazy } from "react";

/* @asyncImports */
console.log("Hello World");


`;
